Fix T46471: Sculpt strokes doesn't mark file as modified