source/blender/editors/sculpt_paint/sculpt_undo.c
@@ -884,7 +884,7 @@ void sculpt_undo_push_begin(const char *name)
 	                         sculpt_undo_restore, sculpt_undo_free, sculpt_undo_cleanup);
 }
 
-void sculpt_undo_push_end(void)
+void sculpt_undo_push_end(const bContext *C)
 {
 	ListBase *lb = undo_paint_push_get_list(UNDO_PAINT_MESH);
 	SculptUndoNode *unode;
@@ -901,4 +901,6 @@ void sculpt_undo_push_end(void)
 	}
 
 	ED_undo_paint_push_end(UNDO_PAINT_MESH);
+
+	WM_file_tag_modified(C);
 }
